images updated content added

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,8 @@ body {
 /*header section*/
 .hero_area {
   height: 100vh;
-  background-image: url(../images/hero-bg.jpg);
+  background-image: url(../images/bgblur.jpg);
+ 
 }
 
 .sub_page .hero_area {
@@ -432,11 +433,11 @@ a:focus {
 }
 
 .feature_section .feature_container .box:hover .img-box {
-  border: 1px solid #10e7f4;
+  border: 1px solid #feffff;
 }
 
 .feature_section .feature_container .box:hover .img-box svg {
-  fill: #10e7f4;
+  fill: #ffffff;
 }
 
 .discount_section {
