making it mobile friendly

--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,9 @@ body {
   padding-bottom: 55px;
 }
 
-.layout_padding-top {
+/* .layout_padding-top {
   padding-top: 100px;
-}
+} */
 
 .layout_padding-bottom {
   padding-bottom: 100px;
