--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6336,11 +6336,11 @@ a.close.disabled {
 }
 
 .carousel-control-prev {
-  left: 0;
+  left: 10px;
 }
 
 .carousel-control-next {
-  right: 0;
+  right: 10px;
 }
 
 .carousel-control-prev-icon,
@@ -6348,7 +6348,7 @@ a.close.disabled {
   display: inline-block;
   width: 20px;
   height: 20px;
-  background: no-repeat 50% / 100% 100%;
+  background: no-repeat 50% / 100% 100%; 
 }
 
 .carousel-control-prev-icon {
