--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,3 +91,19 @@
     }
 }
 
+@keyframes marquee {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+
+  /* Add a media query to adjust the ticker size for small screens */
+  @media (max-width: 767px) {
+    .hitem {
+      font-size: 14px;
+      padding-right: 0.5em;
+    }
+  }
