--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,15 @@ body {
   padding: 10px; */
   text-align: center;
 }
+.navbar{
+  font-size: larger;
+  font-weight: bolder;
 
+}
+.hitem{
+  font-weight: bold;
+  text-transform: uppercase
+}
 /* (D) ANIMATION - MOVE ITEMS FROM RIGHT TO LEFT */
 /* 4 ITEMS -400%, CHANGE THIS IF YOU ADD/REMOVE ITEMS */
 @keyframes tickerh {
@@ -163,7 +171,7 @@ body {
 }
 
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
-  padding: 10px 25px;
+  /* padding: 10px 25px; */
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
@@ -234,7 +242,7 @@ a:focus {
 }
 
 .navbar-brand img {
-  width: 40px;
+  width: 100px;
   margin-right: 5px;
 }
 
@@ -247,7 +255,7 @@ a:focus {
 
 .custom_nav-container {
   z-index: 99999;
-  padding: 10px 0;
+  /* padding: 10px 0; */
 }
 
 .custom_nav-container .form-inline {
@@ -476,7 +484,7 @@ a:focus {
 }
 
 .discount_section .detail-box h2 span {
-  color: #10e7f4;
+  color: #rgb(182, 194, 255);
 }
 
 .discount_section .detail-box p {
@@ -508,7 +516,7 @@ a:focus {
 
 .health_section a {
   display: inline-block;
-  padding: 10px 45px;
+ 
   background-color: #2c2c2c;
   border: 1px solid #2c2c2c;
   color: #ffffff;
