--- a/css/style.scss
+++ b/css/style.scss
@@ -155,7 +155,7 @@ body {
 }
 
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
-  // padding: 10px 25px;
+  padding: 10px 25px;
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
@@ -819,3 +819,4 @@ a:focus {
 }
 
 /* end footer section*/
+
